# hello_world

./: Dockerfile  Makefile  db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
hello_world/: settings.py  urls.py
hello_world/main_app/: apps.py
